updated graphics a bit more. Removed title bar from login screen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,9 +34,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/login_logo"
-                    android:layout_marginBottom="50dp"
-                    />
+                    android:src="@drawable/login_logo" />
 
                 <AutoCompleteTextView
                     android:id="@+id/username"
@@ -67,12 +65,13 @@
 
                 <Button
                     android:id="@+id/username_sign_in_button"
-                    style="?android:textAppearanceSmall"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="@string/action_sign_in"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:enabled="true"
+                    android:focusable="false" />
 
             </LinearLayout>
     </ScrollView>
